@@ -1,6 +1,8 @@
 v3.4.4 (XXXX-XX-XX)
 -------------------
 
+* fixed issue #8165: AQL optimizer does not pick up multiple Geo index
+
 * when creating a new database with an initial user, set the database permission
   for this user as specified in the documentation
 
